-strategy implementation, still Pool nedds fix
